--- a/changelog/style.css
+++ b/changelog/style.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
 * {
-  margin: 0;
-  padding: 0;
   color: white;
   font-family: "Open Sans", "Calibri", sans-serif;
 }
@@ -22,11 +20,46 @@ header {
 
 .content {
   background-color: rgba(0, 0, 0, 0.33);
-  margin: 2em 10em;
-  padding: 1em 2.5em 1em 2.5em;
-  font-size: 1.5em;
+  margin: 2em 20em;
+  padding: 1em;
+  font-size: 1.25em;
+  border-radius: 2em;
 }
 
-ul {
-  list-style: circle outside url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAjUlEQVQ4y2NgGPQgZcKE/xRp7liy5H9odvZ/sjXfevSIPENABuw8efL/3/8rwDTRBoA0wmw/fe0a2AAQDXMFXoNgGkE2gjQhGwDCIHGc3kH2M0gTDF+6xPD/waNyOJ8oQ2AuANEgzSAappFggML8iRwGyLYSHZgghbBYICsakV1BdmKCGUKWZmRDaJrZAFy16kfYt0HIAAAAAElFTkSuQmCC);
+li {
+  line-height: 2em;
+}
+
+.add {
+  list-style: circle inside url(add.png);
+}
+
+.edit {
+  list-style: circle inside url(edit.png);
+}
+
+.none {
+  list-style: circle inside url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAOvwAADr8BOAVTJAAAABh0RVh0U29mdHdhcmUAcGFpbnQubmV0IDQuMS42/U4J6AAAAA1JREFUGFdj+P//PwMACPwC/ohfBuAAAAAASUVORK5CYII=);
+}
+
+img {
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+  user-drag: none;
+}
+
+code {
+  background-color: #eee;
+  color: #000;
+  font-family: monospace;
+  border-radius: 6px;
+  border: 1px solid #333;
+  padding: 2px 6px 2px 6px;
+  font-size: 1.25em;
+}
+
+video, img {
+  border-radius: 0.25em;
 }
