--- a/changelog/style.css
+++ b/changelog/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
 * {
-  color: white;
   font-family: "Open Sans", "Calibri", sans-serif;
 }
 
@@ -9,6 +8,7 @@ body {
   background-image: url(tile.png);
   background-size: 64px;
   image-rendering: pixelated;
+  color: white;
 }
 
 header h1 {
@@ -47,7 +47,7 @@ header p {
   border-radius: 2em;
 }
 
-@media only screen and (max-width: 1000px) {
+@media (max-width: 1000px) {
   .content {
     width: 100%;
     margin: 0;
@@ -57,6 +57,12 @@ header p {
 
 li {
   line-height: 2em;
+}
+
+.content > ul > li > b {
+  font-size: 2em;
+  line-height: 3em;
+  vertical-align: middle;
 }
 
 .add {
@@ -88,7 +94,11 @@ img {
 	font-weight: 900;
 }
 
-#back:hover {
+a {
+  color: white;
+  transition: 250ms color;
+}
+a:hover {
 	color: #bbb;
 }
 
